[package]
name = "custom_egui_frame"
description = "A custom window frame for egui windows"
license = "MIT"
authors = ["Jack Fox <0xdeadbeef1@gmail.com>"]
version = "0.1.1"
edition = "2021"

[dependencies]
eframe = "0.26.2"
egui = "0.26.2"
egui_extras = { version = "0.26.2", features = ["all_loaders"] }
image = { version = "0.24", features = ["jpeg", "png"] }
