[package]
name = "custom_egui_frame"
description = "A custom window frame for egui windows"
license = "MIT"
authors = ["Jack Fox <0xdeadbeef1@gmail.com>"]
version = "0.1.5"
edition = "2021"

[dependencies]
egui = "0.33.3"
eframe = "0.33.3"
egui_extras = { version = "0.33.3", features = ["default", "all_loaders"] }
image = { version = "0.24", features = ["jpeg", "png"] }
